# pipeline_client

./: CMakeLists.txt  README.md
client_common/: bm_face_sdk.h  video_opengl_widget.h  video_pixmap_widget.cpp  video_pixmap_widget.h  video_widget.h
docs/: run_on_se5.md
face_detect_client/: CMakeLists.txt  main.cpp  open_stream_dlg.cpp  open_stream_dlg.h  open_stream_dlg.ui  stream_controller.cpp  stream_controller.h  stream_demo_qt.cpp  stream_demo_qt.h  stream_demo_qt.pro  stream_demo_qt.qrc  stream_demo_qt.rc  stream_demo_qt.ui  system_settings_dlg.cpp  system_settings_dlg.h  system_settings_dlg.ui  video_render_sdl.cpp
pipeline_client/: CMakeLists.txt  main.cpp  open_stream_dlg.cpp  open_stream_dlg.h  open_stream_dlg.ui  stream_controller.cpp  stream_controller.h  stream_demo_qt.cpp  stream_demo_qt.h  stream_demo_qt.rc  stream_demo_qt.ui  system_settings_dlg.cpp  system_settings_dlg.h  system_settings_dlg.ui  video_render_sdl.h
utility/: CMakeLists.txt  face_info_serialize.h  ffmpeg_global.h  otl_json.h  otl_singleton.h  otl_string.cpp  otl_string.h  otl_utils.cpp  otl_utils.h  stream_decode.cpp  stream_decode.h  stream_demuxer.cpp  stream_demuxer.h
